--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ img {height: 100px;}
 
 .row {
     height: 50px;
-    margin: 0 50px 0 50px;
+    margin: 0 50px;
     width: 500px;
 }
 
@@ -27,5 +27,5 @@ img {height: 100px;}
     background-color: rgb(237, 28, 36);
     height: 100px;
     width: 400px;
-    padding: 0 0 0 100px;
+    padding-left: 100px;
 }
